tests/ui/unique_fields_duplicate.stderr
error: unique field path 'email' is repeated
 --> tests/ui/unique_fields_duplicate.rs:8:17
  |
8 | #[derive(Debug, Validate)]
  |                 ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
